Build Failed, attempting to fix

--- a/src/Sitecore.Support.300586/Sitecore.Support.300586.csproj
+++ b/src/Sitecore.Support.300586/Sitecore.Support.300586.csproj
@@ -103,7 +103,6 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CookieWarningController.cs" />
     <Compile Include="CookieWarningRenderingModel.cs" />
     <Compile Include="CookieWarningRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -114,11 +113,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\CookieWarning\Cookie Warning.cshtml" />
     <None Include="web.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\CookieWarning\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
